fixed inbox0 graph verticaol scrollbars

--- a/chrome/content/css/mzts-statstab.css
+++ b/chrome/content/css/mzts-statstab.css
@@ -17,7 +17,7 @@ table.mzts-tinvolved tr.mzts-trow td{padding:2px 4px 2px 2px;color:black;white-s
 table.mzts-tinvolved tr.mzts-trow td.mzts-row-num{text-align:center;word-break:normal;}
 .circle_wait{text-align:center;width:100%;position:absolute;}
 .chart_7days{overflow:auto;}
-.chart_inbox0{overflow:auto;width:100%;height:300px;}
+.chart_inbox0{overflow:auto;width:100%;height:310px;}
 .yesterday_incremental{color:grey;font-size:0.8em;}
 span.outlink{color:blue;text-decoration:underline;cursor:pointer;}
 .mzts-sel-account{font-weight:bold;}
